[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/ChunkSensors.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 256, 7 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 256, 7 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 7, 256 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 7, 256 )

[node name="ChunkSensors" type="Node2D" index="0"]

script = ExtResource( 1 )
top = true
bottom = true
left = true
right = true

[node name="top" type="Area2D" parent="." index="0"]

position = Vector2( -0.323795, 0.0993996 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top" index="0"]

position = Vector2( 256.337, 6.87561 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="bottom" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom" index="0"]

position = Vector2( 255.737, 505.189 )
shape = SubResource( 2 )

[node name="left" type="Area2D" parent="." index="2"]

position = Vector2( -0.0914984, 0.0914979 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="left" index="0"]

position = Vector2( 7.08364, 255.902 )
shape = SubResource( 3 )

[node name="right" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="right" index="0"]

position = Vector2( 505.498, 254.111 )
shape = SubResource( 4 )

[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]

[connection signal="body_entered" from="bottom" to="." method="_on_bottom_body_entered"]

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]

[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]


